--- a/package.json
+++ b/package.json
@@ -31,10 +31,15 @@
 			{
 				"label": "Madeleine Gothic Theme | Default Version",
 				"uiTheme": "vs-dark",
+				"path": "./themes/madeleine_gothic_theme_default.json"
+			},
+			{
+				"label": "Madeleine Gothic Theme | Black",
+				"uiTheme": "vs-dark",
 				"path": "./themes/madeleine_gothic_theme_black.json"
 			},
 			{
-				"label": "Madeleine Gothic Theme purple",
+				"label": "Madeleine Gothic Theme | Purple",
 				"uiTheme": "vs-dark",
 				"path": "./themes/madeleine_gothic_theme_purple.json"
 			}
